--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,7 +1,3 @@
-asgiref==3.8.1
-Django==5.1.1
-sqlparse==0.5.1
-typing_extensions==4.12.2
 arrow==1.3.0
 asgiref==3.8.1
 binaryornot==0.4.4
@@ -18,6 +14,7 @@ Jinja2==3.1.4
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
+pillow==10.4.0
 Pygments==2.18.0
 python-dateutil==2.9.0.post0
 python-slugify==8.0.4
