--- a/src/flowlance_virtual_environment/pyvenv.cfg
+++ b/src/flowlance_virtual_environment/pyvenv.cfg
@@ -1,5 +1,3 @@
-home = C:\Users\ASUS\AppData\Local\Programs\Python\Python312
+home = C:\Users\ASUS\AppData\Local\Microsoft\WindowsApps\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0
 include-system-site-packages = false
-version = 3.12.6
-executable = C:\Users\ASUS\AppData\Local\Programs\Python\Python312\python.exe
-command = C:\Users\ASUS\AppData\Local\Programs\Python\Python312\python.exe -m venv C:\Users\ASUS\Desktop\Proyecto Integrador\202402-proyecto-gecko-team\src\flowlance_virtual_environment
+version = 3.10.11
