--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -5,9 +5,11 @@ certifi==2024.8.30
 chardet==5.2.0
 charset-normalizer==3.3.2
 click==8.1.7
+colorama==0.4.6
 cookiecutter==2.6.0
 Django==5.1.1
 django-browser-reload==1.15.0
+django-cleanup==8.1.0
 django-tailwind==3.8.0
 idna==3.8
 Jinja2==3.1.4
@@ -27,4 +29,5 @@ tailwind==3.1.5b0
 text-unidecode==1.3
 types-python-dateutil==2.9.0.20240906
 typing_extensions==4.12.2
+tzdata==2024.1
 urllib3==2.2.2
