--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -26,6 +26,8 @@ jobs:
         cd src/
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        python manage.py makemigrations
+        python manage.py migrate
     - name: Run Tests
       run: |
         cd src/
