--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -20,6 +20,9 @@ Django==5.1.1
 django-allauth==65.0.2
 django-browser-reload==1.15.0
 django-cleanup==8.1.0
+django-formtools==2.5.1
+django-otp==1.5.4
+django-phonenumber-field==8.0.0
 django-tailwind==3.8.0
 filelock==3.16.0
 frozenlist==1.4.1
@@ -34,10 +37,12 @@ platformdirs==4.3.1
 pycparser==2.22
 Pygments==2.18.0
 PyJWT==2.9.0
+pypng==0.20220715.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-slugify==8.0.4
 PyYAML==6.0.2
+qrcode==7.4.2
 requests==2.32.3
 rich==13.8.0
 six==1.16.0
