--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -43,6 +43,7 @@ python-dotenv==1.0.1
 python-slugify==8.0.4
 PyYAML==6.0.2
 qrcode==7.4.2
+reportlab==4.2.5
 requests==2.32.3
 rich==13.8.0
 six==1.16.0
