--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -24,20 +24,24 @@ django-formtools==2.5.1
 django-otp==1.5.4
 django-phonenumber-field==8.0.0
 django-tailwind==3.8.0
+Faker==30.8.0
 filelock==3.16.0
 frozenlist==1.4.1
+h11==0.14.0
 idna==3.8
 Jinja2==3.1.4
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
 multidict==6.0.5
+outcome==1.3.0.post0
 pillow==10.4.0
 platformdirs==4.3.1
 pycparser==2.22
 Pygments==2.18.0
 PyJWT==2.9.0
 pypng==0.20220715.0
+PySocks==1.7.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-slugify==8.0.4
@@ -46,13 +50,20 @@ qrcode==7.4.2
 reportlab==4.2.5
 requests==2.32.3
 rich==13.8.0
+selenium==4.25.0
 six==1.16.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
 sqlparse==0.5.1
 tailwind==3.1.5b0
 text-unidecode==1.3
+trio==0.27.0
+trio-websocket==0.11.1
 types-python-dateutil==2.9.0.20240906
 typing_extensions==4.12.2
 tzdata==2024.1
 urllib3==2.2.2
 virtualenv==20.26.4
+websocket-client==1.8.0
+wsproto==1.2.0
 yarl==1.10.0
