--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -4,15 +4,21 @@ aiosignal==1.3.1
 arrow==1.3.0
 asgiref==3.8.1
 attrs==24.2.0
+autobahn==24.4.2
+Automat==24.8.1
 binaryornot==0.4.4
 certifi==2024.8.30
 cffi==1.17.1
+channels==4.1.0
 chardet==5.2.0
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
+constantly==23.10.4
 cookiecutter==2.6.0
+coverage==7.6.3
 cryptography==43.0.1
+daphne==4.1.2
 discord==2.3.2
 discord.py==2.4.0
 distlib==0.3.8
@@ -26,17 +32,25 @@ django-phonenumber-field==8.0.0
 django-tailwind==3.8.0
 filelock==3.16.0
 frozenlist==1.4.1
+hyperlink==21.0.0
 idna==3.8
+incremental==24.7.2
+iniconfig==2.0.0
 Jinja2==3.1.4
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
 multidict==6.0.5
+packaging==24.1
 pillow==10.4.0
 platformdirs==4.3.1
+pluggy==1.5.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
 pycparser==2.22
 Pygments==2.18.0
 PyJWT==2.9.0
+pyOpenSSL==24.2.1
 pypng==0.20220715.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
@@ -46,13 +60,18 @@ qrcode==7.4.2
 reportlab==4.2.5
 requests==2.32.3
 rich==13.8.0
+service-identity==24.1.0
+setuptools==75.2.0
 six==1.16.0
 sqlparse==0.5.1
 tailwind==3.1.5b0
 text-unidecode==1.3
+Twisted==24.7.0
+txaio==23.1.1
 types-python-dateutil==2.9.0.20240906
 typing_extensions==4.12.2
 tzdata==2024.1
 urllib3==2.2.2
 virtualenv==20.26.4
 yarl==1.10.0
+zope.interface==7.1.0
